[package]
name = "shanan-cv"
version = "0.1.5"
edition = "2024"
authors = ["Johann Li <me@qinka.pro> @Qinka"]
description = "A high-performance parallel computing computer vision library using CubeCL"
repository = "https://github.com/Qinka/shanan-cv"
keywords = ["computer-vision", "image-processing", "gpu", "cubecl", "parallel"]
categories = ["computer-vision", "multimedia::images"]
license = "Apache-2.0"


[dependencies]
cubecl = { version = "0.9" }
thiserror = "2.0.18"


[features]
default = ["wgpu", "cpu"]
wgpu = ["cubecl/wgpu"]
cpu = ["cubecl/cpu"]


[dev-dependencies]
rand = "0.10"
